--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+unzipped_realtor_data/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
