--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ torchvision==0.16.0
 matplotlib==3.8.0
 scikit-learn==1.3.2
 h5py==3.10.0
-transformers
+transformers==4.35.2
 opencv-stream==0.1.1
 plotly==5.18.0
 torchinfo==1.8.0
@@ -15,5 +15,5 @@ nltk==3.8.1
 #Python framework for fast Vector Space Modellings
 gensim==4.3.2
 torchtext==0.16.0
-fasttext
+#fasttext
 torchmetrics==1.2.1
